# discord-video-embedder-rs

./: Cargo.toml  README.md  build.sh
src/: help.rs  main.rs
src/lib/: lib.rs
